# oifits-sim

./: TODO
CMakeModules/: README
etc/: PFI-MIDIR.txt  PFI-MIDIR_N.txt  PFI-MIDIR_N200chans.txt  PFI-MIDIR_Nbroad.txt  PFI_RING19_1km_2.5m.txt
samples/: EXAMPLES.TXT  PFI-REFIMG-2014-04-21.10micron.fits
src/: .clang-format  Array.cpp  Array.h  Baseline.cpp  Baseline.h  CMakeLists.txt  Combiner.cpp  Combiner.h  Common.cpp  Common.h  Matrix.cpp  Matrix.h  NoiseModel.cpp  NoiseModel.h  NoiseModel_Tatulli2006.cpp  NoiseModel_Tatulli2006.h  Obs_HA.cpp  Obs_HA.h  Obs_OIFITS.cpp  Obs_OIFITS.h  Observation.cpp  Observation.h  Quadruplet.cpp  Quadruplet.h  SpectralMode.cpp  SpectralMode.h  Station.cpp  Station.h  Target.cpp  Target.h  Triplet.cpp  Triplet.h  UVPoint.cpp  UVPoint.h  oifits-sim.cpp  oifits-sim.h  random.h
